Add link to tweet.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,7 @@ layout: default
     {{ site.t[page.lang].written_on }} {% include date.html date=page.date %}
   </div>
 
+  {% include share.html %}
+
   {% include disqus.html %}
 </article>
