Translate article to english.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,7 @@
     </div>
 
     {% include analytics.html %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.8/clipboard.min.js"></script>
     <script src="{{ "/js/prism.js" | prepend: site.baseurl }}"></script>
     <script type="text/javascript">
       Prism.hooks.add('before-sanity-check', function (env) {
